# choirpack

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  go.mod  go.sum  install.sh
.github/workflows/: build.sh  build.yml  nix.yml  release.yml
cmd/: use.go
corepack/: status.go  utils.go  versions.go
packagejson/: modify.go  prettify.go
src/: corepack.rs  main.rs  npm.rs  package_manager.rs
src/cmd/: clean.rs  completions.rs  mod.rs  self_update.rs  update.rs  use_.rs
src/packagejson/: mod.rs  whitespace.rs
