[package]
name = "choirpack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
clap_complete = "4.4.1"
owo-colors = "3.5.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
  "serde_json",
  "json",
  "brotli",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
