[package]
name = "choirpack"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
enum_dispatch = "0.3.12"
futures-util = { version = "0.3.28", optional = true }
humantime = "2.1.0"
indicatif = { version = "0.17.7", optional = true }
owo-colors = "3.5.0"
regex = "1.10.2"
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
  "serde_json",
  "json",
  "brotli",
  "stream",
] }
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }

[features]
default = ["self_update"]
self_update = ["dep:indicatif", "dep:futures-util"]
